Fix footer spacing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
@@ -25,6 +30,18 @@
     font-size: 1.5rem;
 }
 
-.container * a {
+.container .linkedin {
+    float:right;
+    font-size: 1.5rem;
+}
+
+.container .resume {
+    float:right;
+    font-size: 1.5rem;
+}
+
+.container .github a, 
+.container .linkedin a,
+.container .resume a {
     color: inherit;
 }
